; ModuleID = '/home/carl/AnghaBench/php-src/ext/xmlrpc/libxmlrpc/extr_system_methods.c_xsm_register.c'
source_filename = "/home/carl/AnghaBench/php-src/ext/xmlrpc/libxmlrpc/extr_system_methods.c_xsm_register.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@xsm_token_system_multicall = common dso_local global i32 0, align 4
@xsm_system_multicall_cb = common dso_local global i32 0, align 4
@xsm_token_system_get_capabilities = common dso_local global i32 0, align 4
@xsm_system_get_capabilities_cb = common dso_local global i32 0, align 4
@xsm_lazy_doc_methods_cb = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @xsm_register(i32 %0) #0 {
  %2 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %3 = load i32, i32* %2, align 4
  %4 = call i32 @xi_register_system_methods(i32 %3)
  %5 = load i32, i32* %2, align 4
  %6 = load i32, i32* @xsm_token_system_multicall, align 4
  %7 = load i32, i32* @xsm_system_multicall_cb, align 4
  %8 = call i32 @XMLRPC_ServerRegisterMethod(i32 %5, i32 %6, i32 %7)
  %9 = load i32, i32* %2, align 4
  %10 = load i32, i32* @xsm_token_system_get_capabilities, align 4
  %11 = load i32, i32* @xsm_system_get_capabilities_cb, align 4
  %12 = call i32 @XMLRPC_ServerRegisterMethod(i32 %9, i32 %10, i32 %11)
  %13 = load i32, i32* %2, align 4
  %14 = load i32, i32* @xsm_lazy_doc_methods_cb, align 4
  %15 = call i32 @XMLRPC_ServerRegisterIntrospectionCallback(i32 %13, i32 %14)
  ret void
}

declare dso_local i32 @xi_register_system_methods(i32) #1

declare dso_local i32 @XMLRPC_ServerRegisterMethod(i32, i32, i32) #1

declare dso_local i32 @XMLRPC_ServerRegisterIntrospectionCallback(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
